# OpenTrade

./: README.md  pyproject.toml
docs/: 20260527-测试结论.html  20260601-raw-results.json  20260601-测试结论.html  20260601-第三次测试结果分析.html  20260604-2002任务结论.html  Palantir-20260527.html  backend-notes.md  cli-设计与使用说明.md  indicator-coverage.md  observation-examples.md  命令自然化清单.md  架构设计说明.md
efinance_cli/: __main__.py  app.py  command_catalog.py  commands.py  contracts.py  executor.py  facade.py  introspection.py  main.py  models.py  observation.py  registry.py  rendering.py
i18n/: README.zh-CN.md  README.zh-TW.md
opentrade/: __init__.py  __main__.py  app.py  command_catalog.py  commands.py  contracts.py  executor.py  facade.py  main.py  models.py  observation.py  rendering.py  request_schema.py  retry_utils.py
scripts/: regression_reporting.py  run_incremental_full_regression.py  run_third_full_regression.py
tests/: __init__.py  cli_regression_support.py  conftest.py  full_api_regression.py  full_command_regression.py  generate_html_report.py  manual_retry_network_benchmark.py  regression_reporting.py  run_20260604_full_regression.py  run_incremental_full_regression.py  run_third_full_regression.py  test_cli_full_regression.py  test_contracts_unit.py  test_enrichment_edge.py  test_enrichment_smoke.py  test_executor_regression.py  test_facade_unit.py  test_indicators_full.py  test_indicators_smoke.py  test_multi_backend_scaffold.py  test_observation_smoke.py  test_provider_contracts_fix.py  test_provider_handlers_extended.py  test_python_api.py  test_regression_reporting.py  (+3 more)
(+183 files in other folders)
