[project]
name = "opentrade"
version = "1.0.1"
description = "Market data in your terminal, shaped for humans and agents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.18.64",
    "click>=8.4.1",
    "efinance>=0.5.8",
    "pandas",
    "vortezwohl>=0.1.3",
    "yfinance>=1.4.1",
]

[project.scripts]
opentrade = "opentrade.main:main"
optr = "opentrade.main:main"

[tool.setuptools.packages.find]
include = ["opentrade*"]
namespaces = false
